# llm-council

./: .env.example  pyproject.toml  ruff.toml
backend/: agent_pair.py  config.py  council.py  main.py  openrouter.py  validator.py
backend/routers/: __init__.py  documents.py
backend/services/: __init__.py  context_manager.py  document_storage.py  file_validator.py  text_extractor.py
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ChairmanPromptEditor.css  ChairmanPromptEditor.jsx  ChatInterface.css  ChatInterface.jsx  DocumentList.css  DocumentList.jsx  DocumentUpload.css  DocumentUpload.jsx  RolePanel.css  RolePanel.jsx  Stage2.jsx  Stage2_5.css  Stage2_5.jsx  Stage3.jsx  StagePairs.css  StagePairs.jsx  StageValidation.css  StageValidation.jsx
